# vortex-cores

./: .gitignore  Cargo.toml  checkpoint_100.json  checkpoint_200.json  checkpoint_300.json  checkpoint_400.json  checkpoint_500.json  checkpoint_600.json  checkpoint_700.json  checkpoint_800.json  checkpoint_900.json  debug.md  output.vtk  output_stats.json  readme.md  todo.md  vortex_tangle.vtk
src/: compute.rs  extfields.rs  main.rs  newsim.rs  physics.rs  simulation.rs  visualisation.rs
src/shaders/: reconnection.wgsl  thermals.wgsl  velocity.wgsl
